# discord-privacy-client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
apps/osl-hub/: Cargo.toml  build.rs  tauri.conf.json
apps/osl-hub/capabilities/: composer-overlay.json  hub.json  native-discord-overlay.json  native-discord-shield.json
apps/osl-hub/permissions/: hub.toml
apps/osl-hub/scripts/: capture_window.ps1  webview-cdp-eval.ps1
apps/osl-hub/src/: atomic_file.rs  attachment_scan.rs  broker.rs  browser_companion.rs  burn_contract.rs  cleanup.rs  control_contract.rs  core_bridge.rs  discord_carrier_geometry.rs  discord_qa_identity.rs  external_overlay.rs  firefox_migration_coordinator.rs  identity_registry.rs  lib.rs  main.rs  mass_cleanup.rs  models.rs  mullvad_window_host.rs  native_apps.rs  native_attachment_jobs.rs  native_attachment_transport.rs  native_discord_adapter.rs  native_discord_overlay.rs  native_image_viewer.rs  native_window_host.rs  osl_chat.rs  osl_notes.rs  osl_profile.rs  password_lifecycle.rs  peer_attachment_io.rs  placement.rs  preferences.rs  privacy_scan.rs  pro_context_cover.rs  scrub_imap.rs  scrub_index.rs  security.rs  security_credentials.rs  service_host.rs  service_scope_index.rs  (+5 more)
apps/osl-hub/tests/: sealed_relay_e2e.rs  windows_identity_lifecycle.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  aes_gcm.rs  attachment.rs  ed25519.rs  error.rs  hkdf.rs  lib.rs  ml_kem_768.rs  padding.rs  pqxdh.rs  random.rs  ratchet.rs  sender_keys.rs  wire.rs  x25519.rs
crates/crypto/tests/: aead_test.rs  attachment_test.rs  ed25519_test.rs  hkdf_test.rs  ml_kem_768_test.rs  padding_test.rs  pqxdh_test.rs  ratchet_persist_test.rs  ratchet_test.rs  sender_keys_persist_test.rs  sender_keys_test.rs  wire_test.rs  x25519_test.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: app_preferences.rs  attachment_wire.rs  burned_scopes_file.rs  cipher_store_client.rs  commands.rs  control_messages.rs  decoy_mp4.rs  fresh_start.rs  lib.rs  license_lifecycle.rs  main_password.rs  membership.rs  migration.rs  peer_map.rs  pending_invitations.rs  prose_token.rs  recovery.rs  scope.rs  scope_blobs_file.rs  scope_ttl_file.rs  sender_key_state.rs  state.rs  state_reload.rs  tier_gate.rs  tofu.rs  whitelist.rs  whitelist_state.rs  wire_v2.rs
crates/ipc/tests/: commands_test.rs  keyserver_url_default.rs  osl_phase4_roundtrip.rs  osl_phase5_decrypt.rs  peer_map_decrypt.rs  phase5_production_flow.rs  phase5b2_persistence.rs  phase6a_edit.rs  phase7a_fresh_start.rs  phase7a_wire_v2.rs  phase7b_control_messages.rs  phase7b_send_recv_integration.rs  phase7b_whitelist.rs  phase7d_fix3_self_entry.rs  phase8_attachment_integration.rs  phase_a1_v3_wire.rs  phase_a1b_keyserver_mlkem_populate.rs  phase_a1c_burn_kill_list.rs  phase_a2_integration_dr_roundtrip.rs  phase_a2_peer_map_ratchet.rs  phase_a2_wire_v4.rs  phase_a3_integration_sk_roundtrip.rs  phase_a3_sender_key_state_file.rs  phase_a3_skdm.rs  phase_a3_wire_v5.rs  phase_b1_app_preferences.rs  phase_b1_burn_drops_mode1.rs  phase_b1_decode_dispatch.rs  phase_b1_encrypt_output_dispatch.rs  phase_c1_bulk.rs  phase_c1_handshake_removal.rs  phase_c1_migration.rs  phase_c1_summary.rs  phase_c2_bulk_dm.rs  phase_c3_server_defaults.rs  phase_d_fix2_reload.rs  phase_d_tour.rs  phase_f0_fix1_mkdir.rs  phase_f0_fix2_identity_gen.rs  phase_f2_2_license_cache.rs  (+11 more)
crates/keystore/: Cargo.toml
crates/keystore/src/: burn.rs  burn_alert.rs  client.rs  control_inbox.rs  duress.rs  identity.rs  lib.rs  license_cache.rs  password.rs  pending_rotation.rs  prekeys.rs  recipients.rs  sealer.rs  signed_get.rs  storage.rs  unregister.rs  wrapped_key.rs
crates/keystore/tests/: burn_e2e_test.rs  client_test.rs  duress_test.rs  identity_test.rs  license_cache_test.rs  live_keyserver_smoke.rs  password_test.rs  prekeys_e2e_test.rs  prekeys_test.rs  sealer_test.rs  storage_test.rs  username_client.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: clock.rs  lib.rs  recorder.rs  revalidation.rs  rotation.rs  screenshot.rs  usb.rs
crates/runtime/tests/: recorder_test.rs  rotation_test.rs  screenshot_test.rs  usb_test.rs
crates/selectors/: Cargo.toml
crates/selectors/src/: fetcher.rs  lib.rs  manifest.rs
crates/selectors/tests/: keyserver_e2e_test.rs
crates/stego/: Cargo.toml
crates/stego/src/: bigram.rs  bigram_corpus.txt  lib.rs  mode0.rs  mode1.rs  mode1_chunking.rs  (+3 more)
crates/store/: Cargo.toml  SECURITY.md
crates/transport/: Cargo.toml
services/crypto-watcher/: Cargo.toml  README.md  osl-crypto-watcher.service
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: account_burn.html  password_gate.html  settings_window.html
src-tauri/capabilities/: account-burn.json  main.json  password-gate.json  settings-window.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: osl-accept-invitation.toml  osl-accept-key-change.toml  osl-apply-burn.toml  osl-apply-server-default-to-existing-channels.toml  osl-attachment-cache-get.toml  osl-attachment-cache-put.toml  osl-build-session-reset.toml  osl-build-skdm-request.toml  osl-bulk-set-dm-whitelist.toml  osl-bulk-set-whitelist.toml  osl-bulk-unwhitelist-scope.toml  osl-burn-engage.toml  osl-burn-message.toml  osl-burn-password-status.toml  osl-burn-scope-data.toml  osl-change-main-password.toml  osl-check-for-updates.toml  osl-check-vpn.toml  osl-clear-license.toml  osl-close-settings-window-if-open.toml  osl-control-inbox-drain.toml  osl-control-inbox-post.toml  osl-decline-invitation.toml  osl-decline-key-change.toml  osl-decrypt-message.toml  osl-encrypt-attachment-envelope.toml  osl-encrypt-message-v2.toml  osl-encrypt-message.toml  osl-ensure-recovery-phrase.toml  osl-export-data.toml  osl-fetch-attachment-bytes.toml  osl-fresh-start.toml  osl-get-app-preferences.toml  osl-get-encryption-marker.toml  osl-get-friend-ids.toml  osl-get-guild-list.toml  osl-get-identity-info.toml  osl-get-license-state.toml  osl-get-scope-encryption-state.toml  osl-get-scope-ttl.toml  (+85 more)
src-tauri/src/: bootstrap.rs  main.rs  screenshot.rs
(+456 files in other folders)
