[package]
name = "discord-privacy-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Local crates
crypto = { path = "../crates/crypto" }
stego = { path = "../crates/stego" }
transport = { path = "../crates/transport" }
keystore = { path = "../crates/keystore" }
selectors = { path = "../crates/selectors" }
ipc = { path = "../crates/ipc" }
runtime = { path = "../crates/runtime" }

# Screenshot resistance (A2). Win32-only: SetWindowDisplayAffinity
# with WDA_EXCLUDEFROMCAPTURE. Gated to cfg(windows) so non-Windows
# builds still compile (the screenshot-resistance command becomes a
# no-op on those platforms).
#
# Pinned to `=0.56.0` (matches runtime/Cargo.toml + keystore/Cargo.toml)
# so the workspace resolves a single windows-rs version. The HWND
# constructor / typed flag constants shift on patch bumps; bump
# deliberately when needed.
[target.'cfg(windows)'.dependencies]
windows = { version = "=0.56.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []

[[bin]]
name = "discord-privacy-client"
path = "src/main.rs"
