[package]
name = "discord-privacy-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }

# Phase F0: deep-link plugin + single-instance plugin.
# - `tauri-plugin-deep-link`: registers the `osl://` URL scheme and
#   surfaces incoming URLs via an event handler. NSIS bundler picks
#   up `plugins.deep-link.desktop.schemes` from tauri.conf.json and
#   writes the HKCR registry entries at install time.
# - `tauri-plugin-single-instance` (with the `deep-link` feature):
#   intercepts the OS-spawned second instance when `osl://...` fires
#   while OSL is already running, hands the URL off to the existing
#   instance via the deep-link plugin's event channel, then exits
#   the spawned process. Without this, every osl://... activation
#   would open a duplicate OSL window.
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-single-instance = { workspace = true }

# G3.1: auto-updater (check-only this phase; see workspace Cargo.toml).
tauri-plugin-updater = { workspace = true }

serde = { workspace = true }
# Layer 10 / Phase 3: `osl_encrypt_message` accepts an opaque
# `options: serde_json::Value` so the JS-side hook can pass through
# arbitrary metadata (reply context, attachments) without a fixed
# schema during the stub phase. Phase 4 may tighten this to a typed
# struct once the Rust crypto pipeline knows what fields it needs.
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# Phase 8d-FIX5: Discord's CSP blocks browser-side fetch to
# cdn.discordapp.com (cross-subdomain from discord.com). The
# `osl_fetch_attachment_bytes` command routes attachment downloads
# through Rust so the encrypted-attachment scanner can pull bytes
# without tripping the page's `connect-src` directive. rustls-tls
# matches the keystore HTTP client's TLS posture; default-features
# off avoids the native-tls dep cascade.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"

# Local crates
crypto = { path = "../crates/crypto" }
stego = { path = "../crates/stego" }
transport = { path = "../crates/transport" }
keystore = { path = "../crates/keystore" }
selectors = { path = "../crates/selectors" }
ipc = { path = "../crates/ipc" }
runtime = { path = "../crates/runtime" }
store = { path = "../crates/store" }

# Screenshot resistance (A2). Win32-only: SetWindowDisplayAffinity
# with WDA_EXCLUDEFROMCAPTURE. Gated to cfg(windows) so non-Windows
# builds still compile (the screenshot-resistance command becomes a
# no-op on those platforms).
#
# Pinned to `=0.56.0` (matches runtime/Cargo.toml + keystore/Cargo.toml)
# so the workspace resolves a single windows-rs version. The HWND
# constructor / typed flag constants shift on patch bumps; bump
# deliberately when needed.
[target.'cfg(windows)'.dependencies]
windows = { version = "=0.56.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []

[[bin]]
name = "discord-privacy-client"
path = "src/main.rs"
