[package]
name = "ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# IPC keeps its surface Tauri-free: pure command functions, DTOs,
# and the shared `AppState`. The `#[tauri::command]` attribute
# wrappers live in `src-tauri/src/main.rs` because pulling Tauri in
# here also pulls in Wry's gtk/webkit2gtk system-deps tree on Linux,
# which prevents `cargo check -p ipc` from running on lean dev
# environments. Layer 8 deliberately keeps the boundary clean so
# this crate's test suite is portable.
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = "0.22"

# CBOR for Phase 7b control-message bodies (BurnMarker /
# WhitelistInvitation / WhitelistResponse). Chosen for
# schema-flexibility: control message fields may grow as the
# trust model evolves (e.g. multi-recipient burn markers) and a
# self-describing format avoids per-revision wire-format bumps.
# `ciborium` over `serde_cbor` (unmaintained); pure Rust,
# no-std-friendly, no_unsafe.
ciborium = "0.2"

# 7d-B1 main password gate.
# - `argon2`: KDF that derives a 64-byte stream from the user's
#   6-char password. First 32 bytes = stored verification hash;
#   last 32 bytes = AES-GCM key for the recovery-phrase blob.
#   Single argon2 call serves both roles; argon2id output is
#   uniformly random so splitting is safe.
# - `aes-gcm`: AEAD on the BIP39 recovery phrase so the phrase
#   only re-exposes after a successful password.
# - `bip39`: standard English wordlist + 128-bit-entropy phrase
#   generation. `serde` feature off — phrases never serialize.
argon2 = "0.5"
aes-gcm = "0.10"
bip39 = { version = "2", default-features = false, features = ["std", "zeroize"] }
subtle = { workspace = true }
zeroize = { workspace = true }
# 7d-B4 (scoped): HKDF-SHA256 single-block expansion for the
# at-rest file_storage_key derivation. RustCrypto `hmac` paired
# with the existing workspace `sha2`.
hmac = "0.12"
# Phase 2 prose-token pivot: HKDF-SHA256 to derive a per-conversation
# MAC key from the existing per-peer shared secret so encode_token /
# decode_token can authenticate prose-token messages without an extra
# wire roundtrip.
hkdf = { workspace = true }
# Phase 2 prose-token pivot: blocking HTTP client to the cipher-store
# Worker (POST /v1/blob, GET /v1/blob/:id, DELETE /v1/blob/:id).
# `rustls-tls` matches the keystore crate to avoid pulling
# openssl/native-tls on Windows + reproducible-build trees.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
# Phase 8 attachment decoy: a solid-color PNG is prepended to every
# encrypted attachment so non-OSL viewers see a placeholder image
# (rather than corrupt-binary garbage) when they open the file from
# Discord's CDN. `png` is pure Rust, already in the lockfile via
# tauri's icon handling, and has zero unsafe.
png = "0.17"

crypto = { path = "../crypto" }
stego = { path = "../stego" }
keystore = { path = "../keystore" }
store = { path = "../store" }

[dev-dependencies]
tempfile = "=3.13"
