[package]
name = "keystore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# B1: TPM-sealed identity blob (Windows NCrypt with Microsoft Platform
# Crypto Provider) plus a `keyring`-crate fallback for systems
# without TPM. Last-resort `NoOpSealer` keeps the prior plain-file
# behaviour with the loud INSECURE banner intact.
#
# HTTP client is hand-rolled HTTP/1.1 over std::net::TcpStream. Reasons
# for not pulling in ureq / reqwest / attohttpc:
# - Plain HTTP only (the prototype keyserver is plain HTTP); no need
#   for TLS dep tree.
# - ureq 2.12 transitively depends on getrandom 0.4.2 which requires
#   edition-2024 / rustc 1.85+, exceeding our pinned MSRV (1.82).
# - reqwest pulls in tokio/hyper for blocking, > 100 transitive deps.
# - The prototype only needs POST + GET with JSON body / response;
#   ~100 lines of code.
crypto = { path = "../crypto" }
base64 = "0.22"
# B2 — Argon2id password hashing per docs/design/unlock-and-duress.md.
# Production params: m_cost = 64 MiB, parallelism = 1, t_cost tuned to
# ~250 ms on representative hardware. Tests use shrunk params via
# `Argon2Params::fast_for_tests` so they run in milliseconds.
argon2 = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

# Cross-platform fallback when TPM is unavailable (or on non-Windows
# dev environments). Defaults: Windows Credential Manager, macOS
# Keychain, Linux Secret Service via DBus. On Linux WSL without
# DBus the runtime calls fail and `KeyringSealer::new` falls through
# to the next-best sealer; this is a deliberate degradation path.
keyring = { workspace = true }

[target.'cfg(windows)'.dependencies]
# B1 Windows path: NCryptOpenStorageProvider("Microsoft Platform
# Crypto Provider") → TPM-bound RSA key → wrap an XChaCha20-Poly1305
# data key. NCrypt + BCrypt status codes live under Win32_Security.
#
# Pinned to `=0.56.0` (matches runtime/Cargo.toml + src-tauri/Cargo.toml).
# The NCrypt* signatures shift on patch bumps (return types, dwflags
# typing, pcboutput pointer shape, dwlegacykeyspec → `CERT_KEY_SPEC`);
# bump deliberately and re-walk every NCrypt call site.
windows = { version = "=0.56.0", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

[dev-dependencies]
# tempfile 3.27 pulls in getrandom 0.4.2 which needs edition-2024
# (rustc 1.85+); pin to a 3.x that pre-dates that bump.
tempfile = "=3.13"
