[package]
name = "keystore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# B1: TPM-sealed identity blob (Windows NCrypt with Microsoft Platform
# Crypto Provider) plus a `keyring`-crate fallback for systems
# without TPM. Last-resort `NoOpSealer` keeps the prior plain-file
# behaviour with the loud INSECURE banner intact.
#
# HTTP client: reqwest 0.12 blocking + rustls-tls.
#
# Phase B (the Railway-deployable keyserver) needs HTTPS at the
# application layer — Railway force-redirects HTTP→HTTPS at the
# edge, so a plain-HTTP-only client can't talk to a deployed
# instance. The original prototype rolled its own HTTP/1.1 over
# `std::net::TcpStream` to keep the dep tree small and avoid TLS;
# that trade-off only made sense while the keyserver was
# localhost-plain-HTTP-only.
#
# `default-features = false` strips reqwest's default `default-tls`
# (which would pull in native-tls / OpenSSL). `rustls-tls` aliases
# to `rustls-tls-webpki-roots` in reqwest 0.12 — Mozilla CA bundle
# baked in at compile time, no system cert dep, cross-compiles
# cleanly to `x86_64-pc-windows-gnu`. `blocking` because the call
# sites are synchronous (invoked from
# `tauri::async_runtime::spawn_blocking`).
crypto = { path = "../crypto" }
base64 = "0.22"
sha2 = { workspace = true }
# Device-transfer recovery: deterministically derive the identity
# keypairs from a 12-word seed phrase's entropy. ChaCha20Rng is a
# CryptoRng+RngCore seeded from the per-key HKDF output, fed to the
# crypto crate's `generate_keypair_with_rng` so the SAME phrase rebuilds
# the SAME identity on any device. rand_core 0.6 matches the crypto
# crate's bound.
rand_chacha = "0.3"
rand_core = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# B2 — Argon2id password hashing per docs/design/unlock-and-duress.md.
# Production params: m_cost = 64 MiB, parallelism = 1, t_cost tuned to
# ~250 ms on representative hardware. Tests use shrunk params via
# `Argon2Params::fast_for_tests` so they run in milliseconds.
argon2 = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

# Cross-platform fallback when TPM is unavailable (or on non-Windows
# dev environments). Defaults: Windows Credential Manager, macOS
# Keychain, Linux Secret Service via DBus. On Linux WSL without
# DBus the runtime calls fail and `KeyringSealer::new` falls through
# to the next-best sealer; this is a deliberate degradation path.
keyring = { workspace = true }

[target.'cfg(windows)'.dependencies]
# B1 Windows path: NCryptOpenStorageProvider("Microsoft Platform
# Crypto Provider") → TPM-bound RSA key → wrap an XChaCha20-Poly1305
# data key. NCrypt + BCrypt status codes live under Win32_Security.
#
# Pinned to `=0.56.0` (matches runtime/Cargo.toml + src-tauri/Cargo.toml).
# The NCrypt* signatures shift on patch bumps (return types, dwflags
# typing, pcboutput pointer shape, dwlegacykeyspec → `CERT_KEY_SPEC`);
# bump deliberately and re-walk every NCrypt call site.
windows = { version = "=0.56.0", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

[dev-dependencies]
# tempfile 3.27 pulls in getrandom 0.4.2 which needs edition-2024
# (rustc 1.85+); pin to a 3.x that pre-dates that bump.
tempfile = "=3.13"
# REGISTER-FIX: integration tests verify the Ed25519 registration
# signature directly. `crypto` is a normal dependency above; the
# separate integration-test crate needs it listed here to call
# `crypto::ed25519::verify`.
crypto = { path = "../crypto" }
