[package]
name = "selectors"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crypto = { path = "../crypto" }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# E2E test pins this to the same version as keystore so the two
# crates share a copy in the build cache.
tempfile = "=3.13"
