[package]
name = "stego"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Mode 0 base64 placeholder. Modes 1+ (templates / Markov / LLM) will
# add their own encoders alongside; this stays as the fallback.
base64 = "0.22"
# Mode 1 needs HKDF + SHA-256 to derive the per-conversation
# wordlist permutations from the conversation salt (see
# `mode1::permute_indices`).
hkdf = { workspace = true }
sha2 = { workspace = true }
# Phase 9-B1: HMAC-SHA256 truncated to 8 bytes authenticates each
# mode1 chunk header (session_id || index || total) against tampering
# by anyone without the conversation salt.
hmac = "0.12"
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
