[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# AEAD seal/unseal + HKDF key derivation come from the audited
# crypto crate. The store layer holds no novel crypto — it
# composes the same XChaCha20-Poly1305 + HKDF-SHA256 primitives
# the keystore sealers use internally.
crypto = { path = "../crypto" }

# `bundled` compiles SQLite from source so we don't depend on the
# host's libsqlite3 — necessary for the `x86_64-pc-windows-gnu`
# cross build that lacks system SQLite. Bundled SQLite is built
# with FTS5 enabled by default (SQLITE_ENABLE_FTS5=1).
rusqlite = { version = "0.32", features = ["bundled"] }

thiserror = { workspace = true }

[dev-dependencies]
# Pinned to 3.13 to match the rest of the workspace (later 3.x
# pulls a getrandom requiring edition-2024 / rustc 1.85+ which
# is past our MSRV).
tempfile = "=3.13"
